Cleaning up DOM, need to fix edge cases for when measurements are too long and break the flow of the layout

--- a/css/style.css
+++ b/css/style.css
@@ -16,11 +16,11 @@ html{
   font-size: 62.5%;
 }
 body{
-  /* border: 1px solid peru; */
+  border: 1px solid peru;
   font-size: 2rem;
   max-width: 768px;
   margin: 0 auto;
-  padding: 0 10px;
+  /* padding: 0 10px; */
 }
 h1{
   text-indent: 75px;
@@ -37,8 +37,12 @@ nav div{
   /* margin: 0 7.5px;   */
 }
 main{
+  display: flex;
+  flex-direction: column;
   max-width: 768px;
   margin: 0 auto;
+  justify-content: center;
+  align-content: center;
 }
 main h2{
   background:rgb(200, 160, 129);
@@ -66,9 +70,10 @@ nav button{
 /* Shadows */
 main button,
 img,
-.container,
+.ingredients-container,
 .two-columns,
-.instructions{
+.instructions,
+.ingredient-description{
   box-shadow: 0 0 3px black;
 }
 img{
@@ -79,16 +84,22 @@ img{
 h2{
   text-align: center;
 }
-.container{
-  max-width: 540px; 
+.ingredients-container{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-columns: minmax(600px 100%);
+  max-width: 760px; 
   margin: 0 auto;
 }
-.two-columns{
+/* .two-columns{
   display: flex;  
   /* margin: 0 auto; */
-  text-align: center;
-  box-shadow: 1px, 5px, 15px, rgb(0, 0, 0);
-  /* padding: 0 30%; */
+  /* text-align: center;
+  box-shadow: 1px, 5px, 15px, rgb(0, 0, 0); */
+  /* padding: 0 30%; 
+} */
+.ingredients-container h3{
+  grid-column: 1 / -1;
 }
 h3{
   /* height: 30px; */
@@ -105,7 +116,7 @@ h3{
 }
 .ingredients,
 .measurements{
-  flex: 1;
+  /* flex: 1; */
   list-style-type: none;
   padding: 0;
   margin: 0;
@@ -122,13 +133,25 @@ h3{
   cursor: pointer;
   text-align: end;
 }
+.ingredient-description{
+  cursor: pointer;
+  background:rgb(200, 160, 129);
+  position: fixed;  
+  max-width: 650px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 10% 5%;
+
+}
 .measurements{
   text-indent: 10px;
   text-align: left;
 }
 .instructions{
-  max-width: 760px;
-  padding: 0 10%;  
+  max-width: 750px;
+  padding: 0 10%;
+  margin: 0 auto;
 }
 #add-favorite button{
   display: block;
@@ -144,3 +167,6 @@ footer a{
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
+.hidden{
+  display: none;
+}
